@@ -3,6 +3,6 @@ package com.rkukharenka.telegrambot.instaboxbot.common.exception;
 public class UserAlreadyExistsException extends RuntimeException {
 
     public UserAlreadyExistsException(Long chatId) {
-        super(String.format("User with chatId = %s already exists.", chatId));
+        super("User with chatId = %s already exists.".formatted(chatId));
     }
 }
